<resources>
    <string name="app_name">乐骑</string>
    <item name="TAG_KEY_URI" type="id" />
    <string name="separator">--</string>
    <!--WEB接口-->
    <string name="WEB_BASE">http://neu.la/leqi/</string>
    <string name="WEB_LOGIN">http://neu.la/leqi/login.php</string>
    <string name="WEB_CLUB_LIST_REFRESH">http://neu.la/leqi/club_list.php</string>
    <string name="WEB_CLUB_LIST_DATA">http://neu.la/leqi/club_list.php</string>
    <string name="WEB_ACTIVITY_LIST_REFRESH">http://neu.la/leqi/list_activities.php</string>
    <string name="WEB_ACTIVITY_LIST_DATA">http://neu.la/leqi/list_activities.php</string>
    <string name="WEB_BICYCLE_SHOP_LIST_REFRESH"></string>
    <string name="WEB_BICYCLE_SHOP_LIST_DATA"></string>
    <string name="WEB_BICYCLE_SHARE_LIST_REFRESH">http://neu.la/leqi/share_list.php</string>
    <string name="WEB_BICYCLE_SHARE_LIST_DATA">http://neu.la/leqi/share_list.php</string>
    <string name="WEB_MAIN_LIST_REFRESH">http://neu.la/leqi/</string>
    <string name="WEB_PERSONAL_ACTIVITY_LIST_REFRESH">http://neu.la/leqi/list_activities.php</string>
    <string name="WEB_MY_COLLECTION_LIST_REFRESH"></string>
    <string name="WEB_REMOVE_SELF_ACTIVITY"></string>
    <string name="WEB_REMOVE_COLLECT_ACTIVITY"></string>
    <string name="WEB_REMOVE_COLLECT_CLUB"></string>
    <string name="WEB_REMOVE_COLLECT_SHOP"></string>
    <string name="WEB_SHARE_SEND_VIEW">http://neu.la/leqi/post.html</string>
    <string name="release_activity_title">活动标题</string>
    <string name="release_activity_description">活动概述</string>
    <string name="release_activity_starttime">活动发起时间</string>
    <string name="release_activity_endtime">活动结束时间</string>
    <string name="release_activity_startaddress">活动起始地点</string>
    <string name="release_activity_endaddress">活动结束地点</string>
    <string name="release_activity_addtion">参与要求</string>
    <string name="release_activity_style">参与方式</string>
    <string name="action_release_activity">发布</string>
</resources>
