<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_release_activity"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="la.neu.leqi.ReleaseActivityActivity"
    android:focusableInTouchMode="true">
    <TextView
        android:textSize="20dp"
        android:textColor="#ffff"
        android:gravity="center"
        android:background="@color/logMainColor"
        android:text="发布活动"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <ScrollView
        android:id="@+id/release_activity_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/activity_release_activity_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/release_activity_title"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/activity_release_activity_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/release_activity_description"
                    android:gravity="top"
                    android:minLines="3"
                    android:maxLines="6"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/activity_release_activity_starttime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/release_activity_starttime" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/activity_release_activity_endtime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/release_activity_endtime" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/activity_release_activity_startaddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/release_activity_startaddress"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/activity_release_activity_endaddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/release_activity_endaddress"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/activity_release_activity_addtion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/release_activity_addtion"
                    android:maxLines="2" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/activity_release_activity_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/release_activity_style"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>




        </LinearLayout>

    </ScrollView>
    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/activity_release_activity_button"
            android:background="@drawable/button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/action_release_activity"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>
